@@ -1,3 +1,11 @@
+2013-05-14  Sergey Poznyakoff  <gray@gnu.org.ua>
+
+	Add support for Berkeley dump format version 3 (read-only).
+	
+	* src/gdbmapp.h: Include gettext.h and locale.h.
+	* src/gdbmload.c: Support for Berkeley dump format,
+	version 3.
+
 2013-05-13  Sergey Poznyakoff  <gray@gnu.org.ua>
 
 	Remove the "read" command.  Use "import" instead.
